@@ -3,6 +3,7 @@ package ch.kk7.config4j.source.file.resource;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.Objects;
 import java.util.Scanner;
@@ -11,11 +12,11 @@ import static ch.kk7.config4j.source.file.resource.ResourceFetchingException.una
 
 public class URLResource extends AbstractResource {
 	@Override
-	public String read(String path) {
+	public String read(URI path) {
 		try {
-			return read(new URL(path));
+			return read(path.toURL());
 		} catch (MalformedURLException e) {
-			throw unableToFetch("not a valid URL", path, e);
+			throw unableToFetch(path.toString(), "not a valid URL", e);
 		}
 	}
 
@@ -25,7 +26,18 @@ public class URLResource extends AbstractResource {
 			return new Scanner(inputStream, getCharset().name()).useDelimiter("\\A")
 					.next();
 		} catch (IOException e) {
-			throw unableToFetch("cannot read input stream", url.toString(), e);
+			throw unableToFetch(url.toString(), "cannot read input stream", e);
 		}
+	}
+
+	@Override
+	public boolean canHandle(URI path) {
+		try {
+			//noinspection ResultOfMethodCallIgnored
+			path.toURL();
+		} catch (MalformedURLException e) {
+			return false;
+		}
+		return true;
 	}
 }
